better return type when uploading files
