# docs/swagger.json
@@ -4,7 +4,7 @@
         "description": "A WIP serverless framework for running functions similar to AWS Lambda",
         "title": "Jambda - Serverless framework",
         "contact": {
-            "name": "jwtly10",
+            "name": "jwtly10/Jambda",
             "url": "https://www.github.com/jwtly10/jambda"
         },
         "version": "0.1"
@@ -14,12 +14,12 @@
     "paths": {
         "/file/upload": {
             "post": {
-                "description": "Uploads a zip file, validates its contents, and processes it in storage. The zip file must contain a \"bootstrap\" executable.",
+                "description": "Uploads a zip file, validates its contents, and processes it in storage. The zip file must contain a \"bootstrap\" executable. Returns ExternalId",
                 "consumes": [
                     "multipart/form-data"
                 ],
                 "produces": [
-                    "text/plain"
+                    "application/json"
                 ],
                 "tags": [
                     "files"
@@ -35,10 +35,10 @@
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "File uploaded and processed successfully",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/data.FileEntity"
                         }
                     },
                     "400": {
@@ -53,6 +53,28 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "data.FileEntity": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "external_id": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "state": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
                 }
             }
         }
